<resources>
    <string name="app_name">CaliperApp</string>
    <string name="measure_button">measure now</string>
    <string name="save_measurement_button">Save measurement and continue</string>
    <string name="you_need_to_log_in">You need to log into a Google account to use this app. It depends on the fitness
        store from the Google Fit API.</string>
    <string name="select_sex_text">Select ♂ if you have a lot of testosterone. Select ♀ if you are more the estrogen type.</string>
    <string name="select_male">♂</string>
    <string name="select_birthday_explanation">This app uses your birthday to calculate your age. The age is needed because the body fat ratio changes while aging.</string>
    <string name="select_birthday_heading">Please select your birthday:</string>
    <string name="save_birthday">save birthday</string>
    <string name="options_menu_set_sex">set sex</string>
    <string name="options_menu_set_birthday">set birthday</string>
    <string name="value_is_not_a_number">Error: The entered value needs to be a number.</string>
    <string name="stop_measuring_with_this_value">stop measuring with this value</string>
    <string name="enter_the_measurement_as_a_decimal_number">Enter the measurement as a decimal number.</string>
    <string name="caliper_explanation_text">Reset the slider at the scale to maximum.
        Pinch a fold of you skin between thumb and index finger.
        Place the caliper over the fold while still holding it.
        Press the caliper with two fingers of your second hand at the raised positions.
        You may release the fold with your first hand after the caliper maintains its shape.
        Increase the pressure until the caliper clicks into the catch.
        Release the caliper and read the measurement from the scale.</string>
    <string name="expand_symbol">▼</string>
    <string name="collapse_symbol">▲</string>
    <string name="explanation_heading">Explanation:</string>
    <string name="measurement_position_image_description">An image showing the exact position where to take the measurement.</string>
    <string name="measured_thickness_of_the_fold">Measured thickness of the fold:</string>
    <string name="log_in_to_google">Log in to Google</string>
    <string name="display_value">%1$.1f%%</string>
    <string name="display_value_caption">Measurement at %1$tF %1$tT:</string>
    <string name="select_female">♀</string>
    <string name="delete_this_measurement">delete this measurement</string>
    <string name="year_edit_hint">Enter the year you are born in</string>
    <string name="log_out_from_google">log out from google</string>
</resources>
