<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/outerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MeasureActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/explanationLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/explanationHeadingLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/explanationHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:onClick="toggleExplanation"
                    android:text="@string/explanation_heading"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Overline" />

                <TextView
                    android:id="@+id/expandExplanationButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:gravity="end"
                    android:onClick="toggleExplanation"
                    android:padding="0dp"
                    android:text="@string/expand_symbol"
                    android:textAlignment="textEnd"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

            </LinearLayout>

            <TextView
                android:id="@+id/explanationText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/caliper_explanation_text"
                android:visibility="gone" />

        </LinearLayout>

        <ImageView
            android:id="@+id/measurementPositionImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="center"
            android:contentDescription="@string/measurement_position_image_description"
            app:srcCompat="@drawable/ic_belly" />

        <TextView
            android:id="@+id/captionForMeasurementInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="0dp"
            android:text="@string/measured_thickness_of_the_fold"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

        <EditText
            android:id="@+id/measurementInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:autofillHints="@string/enter_the_measurement_as_a_decimal_number"
            android:focusable="auto"
            android:hint="@string/enter_the_measurement_as_a_decimal_number"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/continueMeasurementButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_button"
            android:gravity="end"
            android:onClick="saveMeasurement"
            android:padding="16dp"
            android:enabled="false"
            android:text="@string/save_measurement_button"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

        <Button
            android:id="@+id/abortMeasurementButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_button"
            android:gravity="end"
            android:onClick="saveMeasurement"
            android:padding="16dp"
            android:enabled="false"
            android:text="@string/stop_measuring_with_this_value"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

    </LinearLayout>

</ScrollView>